####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = bzflag
bzflag_SOURCES = main.cpp 
bzflag_LDADD   = 


EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
bzflag_LDFLAGS = $(all_libraries) 
                                                                                
