SUBDIRS = l10n fonts skins

bzflagdir = $(BZFLAG_DATA)
bzflag_DATA = \
	automatic_icon.png	\
	blend_flash.png		\
	boom.wav		\
	bounce.wav		\
	boxwall.png		\
	bubble.png		\
	burrow.wav		\
	bzflag-256x256.png	\
	bzflag-32x32.xpm	\
	bzflag-48x48.png	\
	caution.png		\
	clouds.png		\
	dusty_flare.png		\
	explode1.png		\
	explode2.png		\
	explosion.wav		\
	fire.wav		\
	flag.png		\
	flag_alert.wav		\
	flag_drop.wav		\
	flag_grab.wav		\
	flag_lost.wav		\
	flag_won.wav		\
	flap.wav		\
	frog.png		\
	hunt.wav		\
	hunt_select.wav		\
	jump.wav		\
	jumpjets.png		\
	killteam.wav		\
	land.wav		\
	laser.wav		\
	lock.wav		\
	menu_arrow.png		\
	mesh.png		\
	message_admin.wav	\
	message_private.wav	\
	message_team.wav	\
	missile.png		\
	missile.wav		\
	moon.png		\
	mountain1.png		\
	mountain2.png		\
	mountain3.png		\
	phantom.wav		\
	pop.wav			\
	puddle.png		\
	pyrwall.png		\
	radar.png		\
	raindrop.png		\
	ricochet.wav		\
	roof.png		\
	shock.wav		\
	snowflake.png		\
	spree1.wav		\
	spree2.wav		\
	spree3.wav		\
	spree4.wav		\
	std_ground.png		\
	steamroller.wav		\
	teamgrab.wav		\
	telelink.png		\
	teleport.wav		\
	tetrawall.png		\
	thief.png		\
	thief.wav		\
	title.png		\
	wall.png		\
	water.png		\
	zone_ground.png

EXTRA_DIST = \
	$(bzflag_DATA)

MAINTAINERCLEANFILES =	\
	Makefile.in
