SUBDIRS = \
	fonts \
	l10n \
	skins \
	sounds

bzflagdir = $(BZFLAG_DATA)
bzflag_DATA = \
	automatic_icon.png	\
	alpha_gradient.png	\
	blend_flash.png		\
	boxwall.png		\
	bubble.png		\
	bzflag-256x256.png	\
	bzflag-32x32.xpm	\
	bzflag-48x48.png	\
	caution.png		\
	clouds.png		\
	dusty_flare.png		\
	explode1.png		\
	explode2.png		\
	flag.png		\
	frog.png		\
	jumpjets.png		\
	menu_arrow.png		\
	mesh.png		\
	missile.png		\
	moon.png		\
	mountain1.png		\
	mountain2.png		\
	mountain3.png		\
	mountain4.png		\
	mountain5.png		\
	puddle.png		\
	pyrwall.png		\
	radar.png		\
	raindrop.png		\
	roof.png		\
	snowflake.png		\
	std_ground.png		\
	telelink.png		\
	tetrawall.png		\
	thief.png		\
	treads.png	\
	title.png		\
	wall.png		\
	water.png		\
	wavy_flare.png		\
	zone_ground.png

EXTRA_DIST = $(bzflag_DATA)

MAINTAINERCLEANFILES =	\
	Makefile.in
