SUBDIRS = l10n fonts

dist_pkgdata_DATA =		\
	assets.txt		\
	automatic_icon.png	\
	blue_basetop.png	\
	blue_basewall.png	\
	blue_bolt.png		\
	blue_icon.png		\
	blue_laser.png		\
	blue_super_bolt.png	\
	blue_tank.png		\
	blue_tank_digital.png	\
	blue_tank_facet.png	\
	blue_tank_hex.png	\
	blue_tank_solid.png	\
	blend_flash.png		\
	boom.wav		\
	bounce.wav		\
	boxwall.png		\
	bubble.png		\
	burrow.wav		\
	bzflag.desktop		\
	bzflag-256x256.png	\
	bzflag-32x32.xpm	\
	bzflag-48x48.png	\
	caution.png		\
	clouds.png		\
	dusty_flare.png		\
	explode1.png		\
	explode2.png		\
	explosion.wav		\
	fire.wav		\
	flag.png		\
	flag_alert.wav		\
	flag_drop.wav		\
	flag_grab.wav		\
	flag_lost.wav		\
	flag_won.wav		\
	flap.wav		\
	frog.png		\
	green_basetop.png	\
	green_basewall.png	\
	green_bolt.png		\
	green_icon.png		\
	green_laser.png		\
	green_super_bolt.png	\
	green_tank.png		\
	green_tank_digital.png	\
	green_tank_facet.png	\
	green_tank_hex.png	\
	green_tank_solid.png	\
	hunt.wav		\
	hunt_select.wav		\
	hunter_bolt.png		\
	hunter_laser.png	\
	hunter_super_bolt.png	\
	hunter_tank.png		\
	hunter_tank_digital.png	\
	hunter_tank_facet.png	\
	hunter_tank_hex.png	\
	hunter_tank_solid.png	\
	jump.wav		\
	jumpjets.png		\
	killteam.wav		\
	land.wav		\
	laser.wav		\
	lock.wav		\
	menu_arrow.png		\
	mesh.png		\
	message_admin.wav	\
	message_private.wav	\
	message_team.wav	\
	missile.png		\
	missile.wav		\
	moon.png		\
	mountain1.png		\
	mountain2.png		\
	mountain3.png		\
	mountain4.png		\
	mountain5.png		\
	observer_icon.png	\
	phantom.wav		\
	pop.wav			\
	puddle.png		\
	puffs.png		\
	purple_basetop.png	\
	purple_basetop_normal.png	\
	purple_basetop_specular.png	\
	purple_basewall.png	\
	purple_bolt.png		\
	purple_icon.png		\
	purple_laser.png	\
	purple_super_bolt.png	\
	purple_tank.png		\
	purple_tank_digital.png	\
	purple_tank_facet.png	\
	purple_tank_hex.png	\
	purple_tank_solid.png	\
	pyrwall.png		\
	rabbit_bolt.png		\
	rabbit_laser.png	\
	rabbit_super_bolt.png	\
	rabbit_tank.png		\
	rabbit_tank_digital.png	\
	rabbit_tank_facet.png	\
	rabbit_tank_hex.png	\
	rabbit_tank_solid.png	\
	radar.png		\
	raindrop.png		\
	red_basetop.png		\
	red_basewall.png	\
	red_bolt.png		\
	red_icon.png		\
	red_laser.png		\
	red_super_bolt.png	\
	red_tank.png		\
	red_tank_digital.png	\
	red_tank_facet.png	\
	red_tank_hex.png	\
	red_tank_solid.png	\
	ricochet.wav		\
	roof.png		\
	rogue_bolt.png		\
	rogue_icon.png		\
	rogue_laser.png		\
	rogue_super_bolt.png	\
	rogue_tank.png		\
	rogue_tank_digital.png	\
	rogue_tank_facet.png	\
	rogue_tank_hex.png	\
	rogue_tank_solid.png	\
	shock.wav		\
	shot_tail.png		\
	snowflake.png		\
	spree1.wav		\
	spree2.wav		\
	spree3.wav		\
	spree4.wav		\
	std_ground.png		\
	steamroller.wav		\
	team_ui_colors.png	\
	teamgrab.wav		\
	telelink.png		\
	teleport.wav		\
	tetrawall.png		\
	thief.png		\
	thief.wav		\
	title.png		\
	treads.png		\
	wall.png		\
	water.png		\
	zone_ground.png

MAINTAINERCLEANFILES =	\
	Makefile.in
