all-local:
	@date > datestamp

noinst_HEADERS =			\
	AccessList.h			\
	Address.h			\
	AnsiCodes.h			\
	ArcObstacle.h			\
	AresHandler.h			\
	AutoCompleter.h			\
	BaseBuilding.h			\
	BaseResources.h			\
	BaseSceneNodeGenerator.h	\
	BillboardSceneNode.h		\
	BoltSceneNode.h			\
	BoxBuilding.h			\
	BoxSceneNodeGenerator.h		\
	BufferedNetworkMessage.h	\
	Bundle.h			\
	BundleMgr.h			\
	BSPSceneDatabase.h		\
	BZDBCache.h			\
	BzDocket.h			\
	BzfDisplay.h			\
	BzfEvent.h			\
	BzfJoystick.h			\
	BzfMedia.h			\
	BzfVisual.h			\
	BzfWindow.h			\
	BzMaterial.h			\
	BzVFS.h				\
	CacheManager.h			\
	CallbackList.h			\
	CollisionManager.h		\
	CommandCompleter.h		\
	CommandManager.h		\
	ConeObstacle.h			\
	ConfigFileManager.h		\
	Country.h			\
	DirectoryNames.h		\
	DynamicColor.h			\
	EighthDBaseSceneNode.h		\
	EighthDBoxSceneNode.h		\
	EighthDPyrSceneNode.h		\
	EighthDimSceneNode.h		\
	EighthDimShellNode.h		\
	EmptySceneNodeGenerator.h	\
	ErrorHandler.h			\
	EventClient.h			\
	EventClientList.h		\
	EventHandler.h			\
	Extents.h			\
	Factory.h			\
	FileManager.h			\
	Flag.h				\
	FlagSceneNode.h			\
	FlagWarpSceneNode.h		\
	FontManager.h			\
	Frustum.h			\
	GameTime.h			\
	GfxBlock.h			\
	Intersect.h			\
	KeyManager.h			\
	LagInfo.h			\
	Language.h			\
	LaserSceneNode.h		\
	LinkManager.h			\
	ListServer.h			\
	LuaClientScripts.h		\
	MapInfo.h			\
	MathUtils.h			\
	MediaFile.h			\
	MeshDrawInfo.h			\
	MeshDrawMgr.h			\
	MeshFace.h			\
	MeshFragSceneNode.h		\
	MeshObstacle.h			\
	MeshPolySceneNode.h		\
	MeshSceneNode.h			\
	MeshSceneNodeGenerator.h	\
	MeshTransform.h			\
	Model.h				\
	MotionUtils.h			\
	MsgStrings.h			\
	NetHandler.h			\
	Obstacle.h			\
	ObstacleList.h			\
	ObstacleMgr.h			\
	ObstacleModifier.h		\
	ObstacleSceneNodeGenerator.h	\
	OccluderSceneNode.h		\
	OpenGLGState.h			\
	OpenGLLight.h			\
	OpenGLMaterial.h		\
	OpenGLPassState.h		\
	OpenGLTexture.h			\
	OpenGLUtils.h			\
	OSFile.h			\
	Pack.h				\
	ParseColor.h			\
	PhysicsDriver.h			\
	Ping.h				\
	PlatformFactory.h		\
	PlayerInfo.h			\
	PlayerState.h			\
	PolyWallSceneNode.h		\
	PositionTracker.h		\
	Protocol.h			\
	PyramidBuilding.h		\
	PyramidSceneNodeGenerator.h	\
	QuadWallSceneNode.h		\
	Ray.h				\
	RenderNode.h			\
	SceneDatabase.h			\
	SceneNode.h			\
	SceneRenderer.h			\
	ServerItem.h			\
	ServerList.h			\
	ServerListCache.h		\
	ServerPing.h			\
	ShellSceneNode.h		\
	ShotManager.h			\
	ShotSceneNode.h			\
	ShotUpdate.h			\
	Singleton.h			\
	SphereObstacle.h		\
	SphereSceneNode.h		\
	StartupInfo.h			\
	StateDatabase.h			\
	TankGeometryMgr.h		\
	TankSceneNode.h			\
	Team.h				\
	Teleporter.h			\
	TeleporterSceneNodeGenerator.h	\
	TextChunkManager.h		\
	TextSceneNode.h			\
	TextUtils.h			\
	TextureManager.h		\
	TextureMatrix.h			\
	TimeBomb.h			\
	TimeKeeper.h			\
	TracerSceneNode.h		\
	TriWallSceneNode.h		\
	VerticalSync.h			\
	ViewFrustum.h			\
	VotingArbiter.h			\
	VotingBooth.h			\
	WallObstacle.h			\
	WallSceneNode.h			\
	WallSceneNodeGenerator.h	\
	WordFilter.h			\
	WorldEventManager.h		\
	WorldText.h			\
	ZSceneDatabase.h		\
	bz_Locale.h			\
	bzares.h			\
	bzfSDL.h			\
	bzfgl.h				\
	bzfio.h				\
	bzfstream.h			\
	bzfsAPI.h			\
	bzglob.h			\
	bzsignal.h			\
	bzUnicode.h			\
	common.h			\
	cURLManager.h			\
	global.h			\
	bz_md5.h			\
	messages.h			\
	multicast.h			\
	network.h			\
	bzregex.h			\
	resource.h			\
	vectors.h			\
	version.h			\
	WorldContentInfo.h		\
	win32.h

CLEANFILES = datestamp

MAINTAINERCLEANFILES =	\
	config.h.in	\
	config.h.in~	\
	stamp-h.in	\
	Makefile.in

EXTRA_DIST =	\
	README
