
noinst_HEADERS =			\
	AccessList.h			\
	Address.h			\
	AresHandler.h			\
	AnsiCodes.h			\
	ArcObstacle.h			\
	AutoCompleter.h			\
	BaseSceneNodeGenerator.h	\
	BoxSceneNodeGenerator.h		\
	BSPSceneDatabase.h		\
	BZDBCache.h			\
	BZDBLocal.h			\
	BaseBuilding.h			\
	BaseResources.h			\
	BillboardSceneNode.h		\
	BoltSceneNode.h			\
	BoxBuilding.h			\
	Bundle.h			\
	BundleMgr.h			\
	BzPNG.h				\
	BzMaterial.h			\
	BzfDisplay.h			\
	BzfEvent.h			\
	BzfJoystick.h			\
	BzfMedia.h			\
	BzfVisual.h			\
	BzfWindow.h			\
	bzfsAPI.h			\
	bzfsHTTPAPI.h			\
	CacheManager.h			\
	CallbackList.h			\
	CollisionManager.h		\
	CommandManager.h		\
	CommandsStandard.h		\
	ConeObstacle.h			\
	ConfigFileManager.h		\
	Country.h			\
	DirectoryNames.h		\
	DynamicColor.h			\
	EighthDBaseSceneNode.h		\
	EighthDBoxSceneNode.h		\
	EighthDPyrSceneNode.h		\
	EighthDimSceneNode.h		\
	EighthDimShellNode.h		\
	EmptySceneNodeGenerator.h	\
	ErrorHandler.h			\
	Extents.h			\
	FileManager.h			\
	FontManager.h			\
	Flag.h				\
	FlagSceneNode.h			\
	FlagWarpSceneNode.h		\
	Frustum.h			\
	GameTime.h			\
	GLCollect.h			\
	Intersect.h			\
	KeyManager.h			\
	LagInfo.h			\
	Language.h			\
	LaserSceneNode.h		\
	LinkManager.h			\
	ListServer.h			\
	MediaFile.h			\
	MeshFace.h			\
	MeshFragSceneNode.h		\
	MeshDrawInfo.h			\
	MeshDrawMgr.h			\
	MeshObstacle.h			\
	MeshPolySceneNode.h		\
	MeshSceneNodeGenerator.h	\
	MeshSceneNode.h			\
	MeshTransform.h			\
	MsgStrings.h			\
	NetHandler.h			\
	Obstacle.h			\
	ObstacleList.h			\
	ObstacleMgr.h			\
	ObstacleModifier.h		\
	ObstacleSceneNodeGenerator.h	\
	OccluderSceneNode.h		\
	OpenGLFramebuffer.h		\
	OpenGLGState.h			\
	OpenGLLight.h			\
	OpenGLMaterial.h		\
	OpenGLTexture.h			\
	OpenGLUtils.h			\
	OSFile.h			\
	Pack.h				\
	ParseColor.h			\
	PhysicsDriver.h			\
	Ping.h				\
	PlatformFactory.h		\
	PlayerInfo.h			\
	PlayerState.h			\
	PolyWallSceneNode.h		\
	Protocol.h			\
	PyramidBuilding.h		\
	PyramidSceneNodeGenerator.h	\
	QuadWallSceneNode.h		\
	Ray.h				\
	RenderNode.h			\
	SceneDatabase.h			\
	SceneNode.h			\
	SceneRenderer.h			\
	ServerItem.h			\
	ServerList.h			\
	ServerListCache.h		\
	ShotSceneNode.h			\
	ShotUpdate.h			\
	Singleton.h			\
	SphereObstacle.h		\
	SphereSceneNode.h		\
	StartupInfo.h			\
	StateDatabase.h			\
	TankGeometryMgr.h		\
	TankSceneNode.h			\
	Team.h				\
	Teleporter.h			\
	TeleporterSceneNodeGenerator.h	\
	TetraBuilding.h			\
	TextChunkManager.h		\
	TextUtils.h			\
	TextureManager.h		\
	TextureMatrix.h			\
	TimeBomb.h			\
	TimeKeeper.h			\
	TriWallSceneNode.h		\
	ViewFrustum.h			\
	VotingBooth.h			\
	WallObstacle.h			\
	WallSceneNode.h			\
	WallSceneNodeGenerator.h	\
	WordFilter.h			\
	WorldEventManager.h		\
	ZSceneDatabase.h		\
	bz_Locale.h			\
	bzfSDL.h			\
	bzfgl.h				\
	bzfio.h				\
	bzglob.h			\
	bzsignal.h			\
	common.h			\
	cURLManager.h			\
	global.h			\
	md5.h				\
	messages.h			\
	multicast.h			\
	network.h			\
	vectors.h			\
	vectors_old.h			\
	version.h			\
	win32.h


MAINTAINERCLEANFILES =	\
	config.h.in	\
	config.h.in~	\
	stamp-h.in	\
	Makefile.in

EXTRA_DIST =	\
	README
